Refactor SmartChargingController and SmartChargingServiceImpl for improved UUID handling and active profile retrieval
- Updated SmartChargingController to ensure proper UUID conversion when sending emergency power reduction commands.
- Changed list conversion method from toList() to collect(Collectors.toList()) for better type handling.
- Enhanced SmartChargingServiceImpl to include day of the week and charging group ID when retrieving active power profiles.